fix: the Z-index for menu bar

--- a/app.css
+++ b/app.css
@@ -319,6 +319,7 @@ line-height: 140%;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
   right: 0;
   margin-right: .6rem;
+  z-index: 5;
 }
 .menuContainer li  {
     width: 100%;
